# kystash

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  fmt.sh  test  treefmt.nix
.forgejo/workflows/: caddy_updater.yaml  ci.yaml  lint.yaml  release.yaml  updater.yaml
assets/tests/: ipsum.txt
docs/: book.toml  default.nix
docs/src/: SUMMARY.md  installation.md  introduction.md
nix/: copyright.sh  treefmt.nix
nix/scripts/: build-all.sh  default.nix  release.sh  upgrade.sh
src/: editor.rs  error.rs  logging.rs  main.rs  paths.rs  sha.rs  utils.rs
src/client/: check_server.rs  edit.rs  metadata.rs  mod.rs  upload.rs
src/client/utils/: mod.rs
src/client/utils/api/: get_upload_id.rs  get_upload_status.rs  metadata.rs  mod.rs
src/config/: client.rs  mod.rs  server.rs  shared.rs
src/server/: chunk_map.rs  commands.rs  config.rs  mod.rs
src/server/webserver/: mod.rs
src/server/webserver/middleware/: auth.rs  mod.rs
src/server/webserver/routes/: authorized.rs  metadata.rs  mod.rs  root.rs  version.rs
src/server/webserver/routes/upload/: chunk.rs  mod.rs  status.rs
src/shared/: metadata.rs  mod.rs  status_response.rs  upload_identity.rs  version.rs
src/shared/metadata/: mod.rs  store.rs
src/utils/: editor.rs  error.rs  fs.rs  logging.rs  mod.rs  tests.rs
