[package]
name = "kystash"
version = "0.0.1"
edition = "2024"

[dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
derive_more = { version = "2.1", features = ["debug"] }
uuid = { version = "1.23", features = ["v7", "serde"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.50", features = ["full"] }
clap = { version = "4.6", features = ["derive"] }
futures-util = "0.3"
actix-web = "4.13"
dirs-next = "2.0"
tracing = "0.1"
base64 = "0.22"
bitvec = "1.0"
anyhow = "1.0"
chrono = "0.4"
rand = "0.10"
sha2 = "0.11"
toml = "1.1"
hex = "0.4"
