[package]
name = "kystash"
description = "A simple image/file sharing server/client"
homepage = "https://git.kybe.xyz/2kybe3/kystash"
license = "GPL-3.0"
version = "0.0.1"
edition = "2024"

[dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
derive_more = { version = "2.1", features = ["debug"] }
uuid = { version = "1.23", features = ["v7", "serde"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
postcard = { version = "1.1", features = ["use-std"] }
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.50", features = ["full"] }
clap = { version = "4.6", features = ["derive"] }
futures-util = "0.3"
serde_json = "1.0"
actix-web = "4.13"
mime_guess = "2.0"
dirs-next = "2.0"
tracing = "0.1"
base64 = "0.22"
bitvec = "1.0"
anyhow = "1.0"
infer = "0.19"
rand = "0.10"
sha2 = "0.11"
toml = "1.1"
hex = "0.4"
tracing-test = "0.2.6"
